# kevos

./: .gitignore  LISENCE  README.md
doc/: long_mode.txt  (+1 more)
kevos/: CMakeLists.txt  Makefile
kevos/include/arch/common/: arch-conf.h  assert.h  bitmap.h  config.h  intctl.h  interrupt.h  multiboot.h  page_manager.h  paging.h  types.h
kevos/include/arch/x64/: descriptor.h  gdt.h  mem_layout.h  paging.h  types.h  vm.h
kevos/include/kernel/: process.h  scheduler.h  syscall.h
kevos/include/kernel/common/: bitmap.h
kevos/include/kernel/mm/: heap_alloc.h  heap_mem.h  kheap.h  kheap_mem.h  kmem_mgr.h  mem_layout.h  new.h  page_alloc.h  page_defs.h  page_manager.h  page_mgr.h
kevos/include/kernel/multitask/: process.h  scheduler.h  spinlock.h
kevos/include/kernel/utils/: bitmap.h  list.h
kevos/include/lib/stdinc/: ctype.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
kevos/include/lib/stdinc++/: cstdarg  cstring
kevos/include/sys/: portable.h  types.h
kevos/src/: CMakeLists.txt  Makefile  Makefile.compiler  Makefile.target
kevos/src/arch/common/: Makefile  assert.cpp  ata_driver.cpp  bitmap.cpp  page_manager.cpp
kevos/src/arch/x64/: CMakeLists.compiler  CMakeLists.subdir  boot.32.cpp  boot.64.cpp  gdt.cpp  interrupt.S  kernel-ld-script.ld  vm.cpp
kevos/src/kernel/: Makefile  main.cpp  scheduler.cpp  vsprintf.cpp
kevos/src/test/: test_array.cpp  test_concept.cpp  test_cxx_stdlib_template_main.cpp  test_deque.cpp  test_list.cpp  test_multiprocess.cpp  test_page_allocator.cpp  test_paging.cpp  test_resolve_map.cpp  test_utility.cpp  test_vector.cpp
(+233 files in other folders)
